repair for mobile where the image is cropped at the top

--- a/roelof.css
+++ b/roelof.css
@@ -31,6 +31,7 @@ body {
     font-size: 12px;
     font-weight: 400; 
     background-color: var(--soft-violet);
+    padding-top: 8rem;
 }
 
 ul{
